# Glaucoma_referral_triage

./: .replit  Opticians Letter Epsom and St Helier.tif  app (2).py  app.py  main.py  models.py  pyproject.toml  qwen_utils.py  replit.nix
instance/: glaucoma_triage.db  referrals.db
static/css/: medical.css
static/js/: document_handler.js
templates/: base.html  dashboard.html  upload.html
